schedule full functionality

--- a/src/main/resources/static/planner.html
+++ b/src/main/resources/static/planner.html
@@ -33,10 +33,10 @@
 </div>
 
 <div class="modal fade" id="schedule-edit-modal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="schedule-edit-modal-title" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="schedule-edit-modal-title">Edit your schedule's name</h5>
+                <h5 class="modal-title" id="schedule-edit-modal-title">Edit your schedule</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body d-flex">
